# pokecard-alert-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: pokebot.yml  test.yml
config/: sources.yaml
deploy/: ACCEPTANCE.md  SETUP.md
scripts/: status.py
src/pokebot/: __main__.py  config.py  health.py  logging_setup.py  models.py  normalize.py  pipeline.py  retention.py  seeds.py  sink.py
supabase/.temp/: linked-project.json
tasks/: handoff-cron-reduction-2026-04-26.md  lessons.md  todo.md
tests/: conftest.py  test_archive_non_tokyo_metro.py  test_archive_stale_events.py  test_config.py  test_health.py  test_logging_setup.py  test_models.py  test_normalize.py  test_pipeline.py  test_retention.py  test_sink.py
tests/adapters/: test_amazon_search.py  test_c_labo_blog.py  test_google_news_rss.py  test_hbst_lottery.py  test_http.py  test_nyuka_now_news.py  test_official_news.py  test_official_products.py  test_pokecawatch_chusen.py  test_pokecen_online_lottery.py  test_pokecen_store_voice.py  test_rakuten_books_entry.py  test_rare_zaiko_aggregator.py  test_twitter_syndication.py  test_yamada_lottery.py
tests/e2e/: test_acceptance.py
tests/fixtures/: amazon_search.html  c_labo_blog.html  hbst_article.html  hbst_feed.xml  nyuka_now_news_feed.xml  pokeca_sokuhou.xml  pokecawatch_chusen_feed.xml  pokecen_online_apply.html  pokecen_online_guide.html  pokemon_card_news.html  pokemon_official_products.html  rakuten_books_entry.html  sources_ok.yaml  stv_megatokyo_atom.xml  twitter_pokecayoyaku.html  yamada_pokemon_card.html  yamada_top.html  (+1 more)
(+83 files in other folders)
