[project]
name = "pokebot"
version = "0.1.0"
description = "Pokemon TCG box lottery/restock monitor (personal use)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "line-bot-sdk>=3.11",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "tenacity>=8.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]

[project.scripts]
pokebot = "pokebot.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
